<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name">Files</string>
    <string name="crash_error_activity_error_occurred_explanation">Unhandled exception.</string>
    <string name="crash_error_activity_restart_app">Restart</string>
    <string name="crash_error_activity_error_details">Details</string>
    <string name="crash_error_activity_error_details_title">Exception Details</string>
    <string name="crash_error_activity_error_details_close">Close</string>
    <string name="crash_error_activity_error_details_copy">Copy</string>
    <string name="crash_error_activity_error_details_copied">Copied</string>
    <string name="crash_error_activity_error_details_clipboard_label">Crash info</string>
    <string name="crash_error_activity_out_of_memory">Out of RAM!</string>
    <string-array name="array_language_names">
        <item>Default</item>
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="array_language_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="night_mode_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>-1</item>
    </string-array>
    <string-array name="night_mode_names">
        <item>Off</item>
        <item>On</item>
        <item>Automatic</item>
        <item>Follow system</item>
    </string-array>
    <string-array name="theme_overlay_names">
        <item>Off</item>
        <item>Amoled</item>
        <item>Material 1</item>
    </string-array>
    <string-array name="theme_overlay_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_lifecycle_names">
        <item>1 min.</item>
        <item>2 min.</item>
        <item>5 min.</item>
        <item>10 min.</item>
        <item>15 min.</item>
    </string-array>
    <string-array name="array_lifecycle_items" translatable="false">
        <item>60000</item>
        <item>120000</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
    </string-array>
    <string-array name="array_ffmpeg_names">
        <item>Off</item>
        <item>Enabled</item>
        <item>Primary</item>
    </string-array>
    <string-array name="array_ffmpeg_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_rendering_mode_names">
        <item>Software</item>
        <item>Hardware enabled</item>
        <item>Force Hardware</item>
    </string-array>
    <string-array name="array_rendering_mode_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_long_click_photo_names">
        <item>Disable</item>
        <item>Download</item>
        <item>Rotate</item>
    </string-array>
    <string-array name="array_long_click_photo_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_limit_cache_images_names" translatable="false">
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>128 MB</item>
        <item>256 MB</item>
        <item>512 MB</item>
        <item>1 GB</item>
    </string-array>
    <string-array name="array_limit_cache_images_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>128</item>
        <item>256</item>
        <item>512</item>
        <item>1024</item>
    </string-array>
    <string-array name="player_progress_state" translatable="false">
        <item> ••••••</item>
        <item>• •••••</item>
        <item>•• ••••</item>
        <item>••• •••</item>
        <item>•••• ••</item>
        <item>••••• •</item>
        <item>•••••• </item>
    </string-array>
    <string-array name="array_pager_transform_names" translatable="false">
        <item>Off</item>
        <item>Depth Transformer</item>
        <item>Zoom Out Transformer</item>
        <item>Clock Spin Transformer</item>
        <item>Background To Foreground Transformer</item>
        <item>Cube In Depth Transformer</item>
        <item>Fan Transformer</item>
        <item>Gate Transformer</item>
        <item>Slider Transformer</item>
    </string-array>
    <string-array name="array_pager_transform_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="array_parser_names" translatable="false">
        <item>Json</item>
        <item>MessagePack</item>
    </string-array>
    <string-array name="array_parser_items" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="picasso_dispatcher_names" translatable="false">
        <item>Handler</item>
        <item>Coroutine</item>
    </string-array>
    <string-array name="picasso_dispatcher_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="files">Files</string>
    <string name="button_back">Back</string>
    <string name="search_hint">Search</string>
    <string name="close">Close</string>
    <string name="search_options">Search Options</string>
    <string name="directory_is_empty">Directory is empty</string>
    <string name="error_timeout_message">Request timed out</string>
    <string name="error_unknown_host">No network connection</string>
    <string name="more_info">More info</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Yes</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_copy">Copy</string>
    <string name="button_open">Open</string>
    <string name="not_permitted">Permissions not granted! Feature not available</string>
    <string name="click_back_to_exit">Click again to exit</string>
    <string name="success">Success</string>
    <string name="choose_theme_title">Color Palette</string>
    <string name="night_mode_title">Night mode</string>
    <string name="day_mode_title">Day mode</string>
    <string name="theme_overlay" translatable="false">Amoled/Material 1</string>
    <string name="font_size">Font size</string>
    <string name="use_internal_downloader">Use internal downloader</string>
    <string name="use_internal_downloader_summary">For videos and documents</string>
    <string name="video_controller_to_decor">Video button in DecorView</string>
    <string name="video_swipes">Video swipes</string>
    <string name="show_photos_line">Show photo trackbar</string>
    <string name="music_settings">Player and music</string>
    <string name="audio_round_icon">Round audio covers</string>
    <string name="revert_play_audio">Play button - menu</string>
    <string name="player_has_background">Player background</string>
    <string name="player_background">Player background settings</string>
    <string name="use_stop_audio">Stop instead of pausing audio</string>
    <string name="audio_save_mode_button">Download multiple tracks</string>
    <string name="show_mini_player">Show Mini Player</string>
    <string name="lifecycle_music_service">Player lifetime (sec)</string>
    <string name="ffmpeg_audio_codecs">FFmpeg audio codecs</string>
    <string name="download_directory">Where to download it</string>
    <string name="music_dir">Music</string>
    <string name="photo_dir">Photo</string>
    <string name="video_dir">Video</string>
    <string name="photo_to_user_dir">Sort photos by folder</string>
    <string name="dev_settings">For Developers</string>
    <string name="developer_mode">Developer mode</string>
    <string name="max_bitmap_resolution">Max bitmap resolution</string>
    <string name="max_thumb_resolution">Maximum cover resolution</string>
    <string name="rendering_mode">Image rendering mode</string>
    <string name="need_restart">Restart required</string>
    <string name="enable_dirs_files_count">Number of files in folder</string>
    <string name="cache_cleaner">Clear cache</string>
    <string name="local_media_server">Local media server</string>
    <string name="settings">Settings</string>
    <string name="rotate_speed">Rotation speed %1$d</string>
    <string name="rotate_scale">Background scale %1$d</string>
    <string name="player_blur">Blur %1$d</string>
    <string name="invert_rotating">Rotate Clockwise</string>
    <string name="fade_saturation">Flickering saturation</string>
    <string name="set_default">Reset</string>
    <string name="slidr_vertical_settings">Vertical settings:</string>
    <string name="slidr_horizontal_settings">Horizontal settings:</string>
    <string name="slidr_sensitive">Sensitivity %1$d</string>
    <string name="slidr_velocity_threshold">Velocity threshold %1$d</string>
    <string name="slidr_distance_threshold">Distance threshold %1$d</string>
    <string name="not_available">NOT AVAILABLE</string>
    <string name="theme_edit_title">Choosing a color theme</string>
    <string name="enabled">Enabled</string>
    <string name="enabled_audio_local_sync">Synchronize downloads</string>
    <string name="rotating_player_cover">Rotate player cover</string>
    <string name="audio_channel">FileGallery-Player</string>
    <string name="downloading">Downloading</string>
    <string name="saved_audio">Downloading track…</string>
    <string name="exist_audio">Already downloaded (date change…)</string>
    <string name="cancel">Cancel</string>
    <string name="null_image_link">Missing download link</string>
    <string name="error">Error</string>
    <string name="error_with_message">Error: %1$s</string>
    <string name="work_manager">FileGallery Work</string>
    <string name="channel_keep_work_manager">WorkManager</string>
    <string name="foreground_downloader">Download Manager</string>
    <string name="saved">Saved</string>
    <string name="play">Play</string>
    <string name="duration_format_min_sec" translatable="false"><xliff:g id="format">%1$d:%2$02d</xliff:g></string>
    <string name="duration_format_hour_min_sec" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
    <string name="no_system_equalizer">No system equalizer</string>
    <string name="equalizer">Equalizer</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="copy_track_info">Info</string>
    <string name="audio_force_download">Already downloaded. Download anyway?</string>
    <string name="error_audio">Audio error</string>
    <string name="album_cover">Album cover</string>
    <string name="empty_url">Empty URL</string>
    <string name="open_full_player">Open player</string>
    <string name="save_to_drive">Save to Drive</string>
    <string name="rotate_video">Rotate</string>
    <string name="popup">In the window</string>
    <string name="image_number">%1$d of %2$d</string>
    <string name="download">Download</string>
    <string name="play_audio_after_current">Play Next</string>
    <string name="get_bitrate">Get Bitrate</string>
    <string name="delete">Delete</string>
    <string name="update_time">Set current time</string>
    <string name="edit">Edit</string>
    <string name="bitrate">Bitrate: %1$d kbs, Size: %2$s</string>
    <string name="change_name">Name</string>
    <string name="do_delete">Delete?</string>
    <string name="confirmation">Confirmation</string>
    <string name="developer">Developer: Umerov A.</string>
    <string name="repo">Repository: https://github.com/umerov1999/Fenrir-for-VK</string>
</resources>