<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:text="@string/developer"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:textColor="?colorPrimary"
            android:textSize="@dimen/font_size_subtitle" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoLink="web"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/repo"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:textSize="16sp" />

        <dev.ragnarok.filegallery.view.natives.rlottie.RLottieImageView
            android:id="@+id/lottie_animation"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/app_name"
            app:loopAnimation="true" />
    </LinearLayout>
</ScrollView>
